--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "next": "14.2.8",
+    "framer-motion": "^11.5.4",
+    "next": "13.4.16",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
