--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.8",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
@@ -19,6 +20,7 @@
     "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4"
   }
