--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^14.2.8",
+    "@types/lodash": "^4.17.7",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "framer-motion": "^11.5.4",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4.16",
     "next-auth": "^4.24.7",
     "postcss": "8.4.45",
